Enforce Least Privilege

--- a/SQL Injection/Web.config
+++ b/SQL Injection/Web.config
@@ -6,6 +6,7 @@
 <configuration>
   <connectionStrings>
     <add name="DefaultConnection" providerName=".NET Framework Data Provider for SQL Server"  connectionString="Data Source=.;Initial Catalog=Northwind;Integrated Security=True"/>
+    <add name="ProductSelect" providerName=".NET Framework Data Provider for SQL Server"  connectionString="Data Source=.;Initial Catalog=Northwind;User Id=ProductSelect;Password=SecureCoding@Asiacell2019;"/>
       
   </connectionStrings>
   <system.web>
